[project]
name = "izagent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TATA", email = "evadcmd@gmail.com" }
]
dependencies = [
    "openai>=1.43.0",
    "fastapi[all]>=0.112.2",
    "aiohttp>=3.10.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/izagent"]
