[project]
name = "iiza"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "TATA", email = "evadcmd@gmail.com" }]
dependencies = [
    "openai>=1.43.0",
    "fastapi[all]>=0.112.2",
    "aiohttp>=3.10.5",
    "concurrent-log-handler>=0.9.25",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iiza"]

[tool.rye.scripts]
dev = { cmd = ["uvicorn", "iiza.main:api", "--reload"] }
test = { cmd = ["pytest", "--cov", "-s"] }
